--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,10 @@
+@import "./variable.scss";
+
 html,
 body {
   padding: 0;
   margin: 0;
+  font-size: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -12,5 +15,7 @@ a {
 }
 
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
