--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,3 +19,12 @@ a {
   margin: 0;
   box-sizing: border-box;
 }
+
+.boxfirst_cart h4 {
+  font-size: 21px;
+  color: #204697;
+  font-family: sofia-pro, Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  margin: 2px;
+}
