--- a/styles/header/header.module.scss
+++ b/styles/header/header.module.scss
@@ -29,3 +29,18 @@
   width: 100px;
   height: 92px;
 }
+// .bannerButton button {
+//   color: #ffffff;
+//   background-color: #f22222;
+//   padding: 9px;
+//   border-radius: 42px;
+//   padding-left: 40px;
+//   padding-right: 40px;
+//   font-size: 18px;
+//   padding-top: 12px;
+//   padding-bottom: 12px;
+//   font-weight: 300;
+//   letter-spacing: 0.5px;
+//   margin-top: 50px;
+//   margin-bottom: 37px !important;
+// }
