--- a/styles/NewProductPage.module.scss
+++ b/styles/NewProductPage.module.scss
@@ -5,27 +5,27 @@
 
 .container {
     display: flex;
-
-    // border: 2px solid #0e3f70;
     height: 400px;
-    width: 400px;
+    width: 435px;
     background: #fff;
     position: absolute;
     right: 100px;
     top: 50%;
     transform: translateY(-50%);
+    -webkit-backdrop-filter: blur(15px);
     backdrop-filter: blur(15px);
     border-radius: 6px;
     overflow: hidden;
 }
 
 .left {
+    flex: .3;
     background: #0e3f70;
     flex-wrap: wrap;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 2px;
+    // padding: 2px
     
 }
 
@@ -33,20 +33,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    // height: 80px;
     flex: 1;
     transition: all 200ms ease-in;
-    width: 80px;
     justify-content: center;
     background: #0e3f70;
     user-select: none;
     cursor: pointer;
-    border-radius: 4px;
-
-    &:nth-of-type(1) {
-        background-color: white;
-    }
-
+  span{
+    font-size: small;
+  }
 }
 
 .right {
