--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -45,8 +45,8 @@ a {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  color: inherit !important;
+  text-decoration: none !important;
   cursor: pointer;
 }
 
