--- a/styles/cart.module.scss
+++ b/styles/cart.module.scss
@@ -38,7 +38,7 @@
         font-family: sofia-pro, Helvetica, Arial, sans-serif;
         font-weight: 700;
         font-style: normal;
-        margin: 10px;    
+          
 }
     
 }
@@ -60,4 +60,9 @@
     width: 100%;
     
 }
+
+.item3 h5{
+    margin: 20px;
+}
+
 
