--- a/styles/contact.module.scss
+++ b/styles/contact.module.scss
@@ -19,7 +19,7 @@
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   padding: 10px 20px;
   background-color: #fff;
-  width: 150%;
+  width: 100%;
   height:auto;
   align-items:center;
   justify-content:center; 
@@ -175,10 +175,130 @@ background-color:rgb(243, 243, 248);
 }
 }
 
+.check{
+  padding: 20px;
+  width: 400px;
+  box-shadow: 0 2px 10px 0 rgb(0 0 0 / 13%) !important;
+  border-radius: 10px;
+  background-color: #fff;
+
+
+}
+
+.checkform{
+  box-sizing: border-box;
+  width: 400px;
+  background: #00b2bd;
+  padding: 20px;
+  box-shadow: 0 2px 10px 0 rgb(0 0 0 / 13%) !important;
+  border-radius: 5px;
+ 
+  p {
+    color: #fff;
+  }
+
+}
+
+.checkord{
+  text-align: center;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: #fff;
+  color: #3a356d;
+  width: 261px;
+  margin-left: 46px;
+  margin-top: 14px;
+  padding: 11px;
+  font-weight: 500;
+  border-radius: 28px
+  
+}
+
+.checkpro{
+
+cursor: pointer;
+border: 0;
+padding: 15px;
+background: #42a2a2;
+border-radius: 5px;
+font-size: 16px;
+font-family: montserrat, sans-serif;
+line-height: 18px;
+color: #fff;
+margin: 0;
+text-transform: uppercase;
+width: 100%;
+}
  
 
- 
+.price {
+  display: flex;
+    justify-content: space-between;
+    padding: 2px 0px !important;
+    border-bottom: 1px solid #e0e0e0;
+    margin-top: 5px;
 
+    p {
+      color: #fff;
+    }
+}
+.Cart_finalCheckout{
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.Cart_text{
+  padding: 20px;
+}
+.Cart_text p:nth-child(1) {
+  font-size: 18px !important;
+}
+.Cart_text p:nth-child(2) {
+  font-size: 16px;
+}
+.Cart_text p {
+  padding: 20px 10px;
+  width: 100%;
+  border: none;
+  background-color: #fff;
+}
+.CartItems_buttons{
+display: flex;
+width: 100%;
+justify-content: space-around;
+border-top: 1px solid #80808061;
+border-right: 2px solid rgba(0, 0, 0, 0.04);
+background-color: white;
+border-right-color: currentcolor;
+border-right-style: none;
+border-right-width: 0px;
+padding: 15px 10px;
+color: gray;
+margin: 0;
+    
+  button{
+    border: none;
+background-color: transparent;
+color: gray;
+  }
+  .removebutton {
+    color: gray;
+  }
+  
+}
+
+
+.bagitem{
+color: rgb(14, 63, 112);
+font-weight: 700;
+font-size: 20px;
+margin-top: 0;
+margin-bottom: 1rem;
+}
+
+.colorchange {
+  color: rgb(0, 178, 189);;
+}
  
 
  
