--- a/styles/gardenFurniture/gardenFurniture.module.scss
+++ b/styles/gardenFurniture/gardenFurniture.module.scss
@@ -128,7 +128,6 @@
   background-color: currentColor;
   border: 0;
   opacity: 0.25;
-  margin-top: 40px;
 }
 .mattressExcusive h2 {
   color: #222178;
@@ -175,7 +174,7 @@
   padding-bottom: 40px;
 }
 .firmmatrress {
-  background-color: #1e196c;
+  background-image: url(/assets/images/mattressbanner/Group539.png);
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 30px;
@@ -218,10 +217,7 @@
   color: #7c7c7c;
   font-size: 15px;
   text-align: center;
-  padding-top: 10px;
-  padding-bottom: 20px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-top: 20px;
 }
 .tabs {
   width: 100%;
@@ -292,55 +288,24 @@
 .mExcusivep {
   padding: 0;
 }
-.mydiv2 {
-  h1 {
-    font-weight: 700;
-    font-size: 34px;
-    color: #17175f;
-    margin-top: 40px;
-    margin-bottom: 28px;
-    text-align: center;
-    font-family: sans-serif;
-  }
+.gardenexclsv h2 {
+  color: #ec9e17;
+  font-size: 41px;
+  margin-top: 10px;
 }
-.bedicon {
-  .bedbox {
-    margin-left: 38px;
-
-    p {
-      text-align: center;
-      font-size: 14px;
-      font-family: sans-serif;
-      font-weight: 600;
-      margin-top: 18px;
-    }
-    img {
-      width: 80px;
-      height: 75px;
-      margin: 0 auto;
-      display: block;
-    }
-  }
+.gardenexclsv p {
+  color: #000;
+  font-size: 15px;
+  margin-top: 20px !important;
 }
-.mydiv6 {
-  .colorbox {
-    img {
-      height: 60px;
-      width: 110px;
-    }
-  }
-}
-.mydiv6heading {
-  h1 {
-    text-align: center;
-    font-family: sans-serif;
-    font-size: 38px;
-    padding: 30px 0px 40px;
-    font-weight: 700;
-    color: #0a3459;
-  }
-}
-.bedicon {
-  padding-top: 35px;
-  padding-bottom: 35px;
+.gardenexclsv button {
+  color: #ffffff;
+  background-color: #f22222;
+  padding: 7px 35px 7px 35px;
+  border-radius: 0px;
+  font-size: 18px;
+  margin: auto;
+  font-weight: 300;
+  margin-bottom: 13px;
+  border: none;
 }
