--- a/layout/headerstyle/topheader.module.scss
+++ b/layout/headerstyle/topheader.module.scss
@@ -123,8 +123,8 @@ section.headersection:before {
 .mainlogo {
     img {
         position: relative;
-        right: 120px;
-        top: 0;
+        right: 60px;
+        top: -20px;
     }
 }
 
