--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -1,3 +1,7 @@
+.mydiv {
+    margin-top: 30px;
+}
+
 .headingh1  {
     font-size: 40px;
     font-family: sans-serif;
@@ -24,6 +28,8 @@
     text-align: center;
     color: #0e3f70;
     margin-left: -70px;
+    position: relative;
+    left: 75px;
 }
 .bannersection {
     position: relative;
@@ -91,7 +97,7 @@
     overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
-   -webkit-line-clamp: 2; /* number of lines to show */
+   -webkit-line-clamp: 1; /* number of lines to show */
            line-clamp: 2; 
    -webkit-box-orient: vertical;
    line-height: 20px;
@@ -106,7 +112,6 @@
 }
 .box1 {
     border: 1px solid #80808063;
-    padding-bottom: 70px;
     width: 260px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -138,4 +143,40 @@
             color: #0e3f70;
             font-family: sans-serif;
         }
+}
+.imgae {
+    img {
+        width: 100%;
+        position: relative;
+        left: 90px;
+    }
+}
+.trustpilot {
+    img {
+        width: 160px;
+        position: relative;
+        left: 12px;
+        padding-bottom: 17px;
+        padding-top: 16px;
+    }
+}
+.bedicon{
+    padding-top: 20px;
+    .bedbox {
+        margin-left: 38px;
+    
+        p {
+            text-align: center;
+            font-size: 14px;
+            font-family: sans-serif;
+            font-weight: 600;
+            margin-top: 18px;
+        }
+        img {
+            width: 120px;
+            height: 101px;
+            margin: 0 auto;
+            display: block;
+        }
+    }
 }
