--- a/styles/allbed/allbed.module.scss
+++ b/styles/allbed/allbed.module.scss
@@ -1,277 +1,371 @@
-.mydiv{
-    background-image: url(/images/All-beds.png);
-    background-color: #e7e7e7;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 75vh;
-    
+.mydiv {
+  background-image: url(/images/All-beds.png);
+  background-color: #e7e7e7;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 75vh;
 
-    div
-    {
-        h1{
-            color: #ffffff;
-            font-family: "Sofia Pro", sans-serif;
-            font-size: 44px;
-            text-align: center !important;
-            padding: 40px 0px 0px;
-            font-weight: bolder;
-          }
-
+  div {
+    h1 {
+      color: #ffffff;
+      font-family: "Sofia Pro", sans-serif;
+      font-size: 44px;
+      text-align: center !important;
+      padding: 40px 0px 0px;
+      font-weight: bolder;
     }
-     p{
-        color: rgb(255, 255, 255);
-        font-size: 15px;
-        margin-top: 1.5rem !important;
-        font-family: "Roboto", sans-serif !important;
-        
-        font-weight: var(--bs-body-font-weight);
-        line-height: var(--bs-body-line-height);
-        max-width: 498px;
-        text-align: center;
-        margin: 0 auto;
-        
-        
+  }
+  p {
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    margin-top: 1.5rem !important;
+    font-family: "Roboto", sans-serif !important;
 
-      }
-      button{
-        color: rgb(255, 255, 255);
-        background-color: rgb(242, 34, 34);
-        padding: 7px 31px 5px 26px;
-        border-radius: 42px;
-        font-size: 18px;
-        border: 0;
-        display: block;
-        margin: 0px auto; 
-        margin-top: 50px;
-    
-      }
-      }
+    font-weight: var(--bs-body-font-weight);
+    line-height: var(--bs-body-line-height);
+    max-width: 498px;
+    text-align: center;
+    margin: 0 auto;
+  }
+  button {
+    color: rgb(255, 255, 255);
+    background-color: rgb(242, 34, 34);
+    padding: 7px 31px 5px 26px;
+    border-radius: 42px;
+    font-size: 18px;
+    border: 0;
+    display: block;
+    margin: 0px auto;
+    margin-top: 50px;
+  }
+}
 
-      .del{
-        background-color: #EC9E17;
-        margin-top: .5rem !important;
-        font-family: var(--bs-body-font-family);
-        font-size: var(--bs-body-font-size);
-        font-weight: var(--bs-body-font-weight);
-        line-height: var(--bs-body-line-height);
-        color: var(--bs-body-color);
-        padding: 16px 0px;
-        h3 {
-            font-style: normal;
-            font-size: 1.75rem;
-            color: #141414;
-            margin-top: 0;
-            margin-bottom: .5rem;
-            font-weight: 500;
-            line-height: 1.2;
-            font-family: "Sofia Pro", sans-serif;
-            text-align: center !important;
-        }
-      }
+.del {
+  background-color: #ec9e17;
+  margin-top: 0.5rem !important;
+  font-family: var(--bs-body-font-family);
+  font-size: var(--bs-body-font-size);
+  font-weight: var(--bs-body-font-weight);
+  line-height: var(--bs-body-line-height);
+  color: var(--bs-body-color);
+  padding: 16px 0px;
+  h3 {
+    font-style: normal;
+    font-size: 1.75rem;
+    color: #141414;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+    line-height: 1.2;
+    font-family: "Sofia Pro", sans-serif;
+    text-align: center !important;
+  }
+}
 
-      .mydiv1{
-        background-color: #f3f3f8;
-        h2{
-            color: #222178;
-            font-weight: 700;
-            font-size: 42px;
-            margin-bottom: 15px;
-            font-family: "Sofia Pro", sans-serif;
-            text-align: center;   
-            margin-bottom: 65px;
+.mydiv1 {
+  background-color: #f3f3f8;
+  h2 {
+    color: #222178;
+    font-weight: 700;
+    font-size: 42px;
+    margin-bottom: 15px;
+    font-family: "Sofia Pro", sans-serif;
+    text-align: center;
+    margin-bottom: 65px;
+  }
+  img {
+    width: 65px;
+    height: 65px;
+    margin-left: 160px;
+  }
+  p {
+    text-align: center;
+    margin-left: 173px;
+  }
+}
+.mydiv2 {
+  background-color: #f3f3f8;
+}
+.bedicon {
+  background-color: #f3f3f8;
+}
 
-           
-          }
-          img {
-            width: 65px;
-            height: 65px;
-            margin-left: 160px;
-          }
-          p {
-            text-align: center;
-            margin-left: 173px;
-          }
-        }
-
-      
 .mydiv3 {
-    h3{
+  h3 {
     font-size: 42px;
     font-weight: 700;
     margin-bottom: 15px;
     color: #1e196c;
     text-align: center;
     margin-top: 40px;
+  }
+  p {
+    width: 996px;
+    margin-left: 65px;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.2901960784);
+    padding-bottom: 30px;
+    font-weight: 600;
+    font-size: 16px;
+  }
+}
 
-        }
-        p{
-            width: 996px;
-            margin-left: 65px;
-            border-bottom: 1px solid #8080804a;
-            padding-bottom: 30px;
-            font-weight: 600;
-            font-family: "Roboto", sans-serif !important;
-            
-        }
-    
-    }
-
-    .col{
-        color: #262884;
-    }
+.col {
+  color: #262884;
+}
 .box1 {
-    margin-top: 40px;
-    .buttonnow{
-        color: rgb(255, 255, 255);
-        background-color: rgb(242, 34, 34);
-        padding: 7px 31px 5px 26px;
-        font-size: 18px;
-        border: 0;
-        display: block;
-        max-width: 355px;
-        
-    
-    }
-    h1 {
-        text-align: initial;
-        font-size: 17px;
-    }
-    p {
-        text-align: initial;
-        margin-bottom: 60px;
-    }
+  margin-top: 40px;
+  .buttonnow {
+    color: rgb(255, 255, 255);
+    background-color: rgb(242, 34, 34);
+    padding: 7px 31px 5px 26px;
+    font-size: 18px;
+    border: 0;
+    display: block;
+    max-width: 355px;
+  }
+  h1 {
+    text-align: initial;
+    color: #805390;
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: 24px;
+  }
+  p {
+    text-align: initial;
+    margin-bottom: 60px;
+    color: #7c7c7c;
+  }
 }
-.allbedbed{
-img {
-    width: 440px;
-    background-color: #8E55AB;
-    
-
-}
-}
-
-.sleighbed{
-    background-color: #f3f3f8;
+.allbedbed {
+  img {
+    width: 481px;
+    background-color: #8e55ab;
+  }
 }
 
-.picture{
-       display: flex;
-        margin-top: 65px;
-        margin-bottom: 65px;
-        background: #fff;
-        max-width: 995px;
-        margin-left: auto;
-        margin-right: auto;
-    
+.sleighbed {
+  background-color: #f3f3f8;
 }
 
-.shopcolor{
-
-    h2{
-        color: #222178;
-        font-weight: 700;
-        font-size: 42px;
-        font-family: "Sofia Pro", sans-serif;
-        text-align: center;
-        margin-top: 70px;
-    }
-    img {
-        width: 65px;
-        height: 65px;
-        margin-left: 160px;
+.picture {
+  display: flex;
+  margin-top: 65px;
+  margin-bottom: 65px;
+  background: #fff;
+  max-width: 995px;
+  margin-left: auto;
+  margin-right: auto;
 }
-p {
+
+.shopcolor {
+  h2 {
+    color: #222178;
+    font-weight: 700;
+    font-size: 42px;
+    font-family: "Sofia Pro", sans-serif;
+    text-align: center;
+    margin-top: 70px;
+  }
+  img {
+    width: 65px;
+    height: 65px;
+    margin-left: 160px;
+  }
+  p {
     text-align: center;
     margin-left: 173px;
     margin-bottom: 70px;
   }
 }
 
-.picture2{
-    display: flex;
-    max-width: 800px;
+.picture2 {
+  display: flex;
+  max-width: 800px;
 }
 
-.sofabed{
-    background-image: url(/images/redbackground.png);
-    
+.sofabed {
+  background-image: url(/images/redbackground.png);
+  padding-bottom: 100px;
 }
-.box2{
-    color: #fff;
-    margin-top: 80px;
-    p{
-        margin-bottom: 50px;
-    }
-    h1{
-        margin-bottom: 24px;
-    }
+.box2 {
+  color: #fff;
+  margin-top: 80px;
+  p {
+    margin-bottom: 50px;
+  }
+  h1 {
+    margin-bottom: 24px;
+  }
 }
 .allbedbedbed {
-    position: absolute;
-    top: -39px;
-    img {
-        width: 500px;
-    }
-  
+  position: absolute;
+  top: -39px;
+  img {
+    width: 500px;
+  }
 }
-.sofabutton{
-    color: rgb(255, 255, 255);
-        background-color: rgb(242, 34, 34);
-        padding: 7px 31px 5px 26px;
-        font-size: 18px;
-        border: 0;
-        display: block;
-        max-width: 355px;
-
+.sofabutton {
+  color: rgb(255, 255, 255);
+  background-color: rgb(242, 34, 34);
+  padding: 7px 31px 5px 26px;
+  font-size: 18px;
+  border: 0;
+  display: block;
+  max-width: 355px;
 }
 
 .mydiv6 {
-    .colorbox {
-        img {
-            height: 60px;
-            width: 110px;
-        }
+  .colorbox {
+    img {
+      height: 60px;
+      width: 110px;
     }
+  }
 }
 .mydiv6heading {
-    h1{
-        text-align: center;
-        font-family: sans-serif;
-        font-size: 38px;
-        padding: 30px 0px 40px;
-        font-weight: 700;
-        color: #0a3459;
-    }
+  h1 {
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 38px;
+    padding: 30px 0px 40px;
+    font-weight: 700;
+    color: #0a3459;
+  }
 }
 
 .mydiv2 {
-    h1 {
-        font-weight: 700;
-        font-size: 34px;
-        color: #17175f;
-        margin-top: 40px;
-        margin-bottom: 28px;
-        text-align: center;
-        font-family: sans-serif;
+  h1 {
+    font-weight: 700;
+    font-size: 42px;
+    margin-bottom: 28px;
+    text-align: center;
+    font-family: sans-serif;
+    margin-top: 95px;
+    color: #222178;
+  }
+}
+.bedicon {
+  .bedbox {
+    margin-left: 40px;
+    margin-right: 40px;
+
+    p {
+      text-align: center;
+      font-size: 14px;
+      font-family: sans-serif;
+      font-weight: 600;
+      margin-top: 18px;
     }
+    img {
+      width: 80px;
+      height: 75px;
+      margin: 0 auto;
+      display: block;
+    }
+  }
+}
+.bedicon2 {
+  background-color: #fff;
+  padding-bottom: 100px;
+  .bedbox {
+    margin-left: 38px;
+
+    p {
+      text-align: center;
+      font-size: 14px;
+      font-family: sans-serif;
+      font-weight: 600;
+      margin-top: 18px;
+    }
+    img {
+      width: 80px;
+      height: 75px;
+      margin: 0 auto;
+      display: block;
+    }
+  }
+}
+
+.mydiv8 {
+  h2 {
+    text-align: center;
+    color: red;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    font-size: 1.5rem;
+    margin-top: 50px !important;
+    font-weight: bolder;
+  }
+  h1 {
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+    color: #222178;
+    font-weight: 800;
+    margin-top: 0.5rem !important;
+    font-size: 2rem;
+    line-height: 1.2;
+  }
+  p {
+    text-align: center;
+        max-width: 595px;
+    display: block;
+    margin: 0 auto;
+    color: #7c7c7c;
+    font-size: 15px;
+    margin-top: 0.5rem !important;
+    margin-bottom: 30px !important;
+  }
+}
+
+.mydiv9 {
+  margin-top: 30px;
+  margin-bottom: 100px;
+  .innerbox {
+    background-color: #f2f2f2;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  select {
+    border: none;
+    outline: none;
+    font-size: 18px;
+    font-weight: 600;
+    width: 150px;
+    color: #060644;
+    background: transparent;
+  }
+}
+
+.discover{
+
 
 }
-.bedicon{
-    .bedbox {
-        margin-left: 38px;
-    
-        p {
-            text-align: center;
-            font-size: 14px;
-            font-family: sans-serif;
-            font-weight: 600;
-            margin-top: 18px;
-        }
-        img {
-            width: 80px;
-            height: 75px;
-            margin: 0 auto;
-            display: block;
-        }
+.benifit{
+    h1{
+        font-size: 42px;
+        font-weight: 700;
+        margin-bottom: 15px;
+        text-align: center!important;
+        color: #262884;
+        margin-bottom: 20px;
     }
+    p{
+        text-align: center;
+        margin-bottom: 50px;
+    }
+}
+.service{
+    
+    padding: 7px 31px 5px 26px;
+    border-radius: 42px;
+    font-size: 18px;
+    border: 0;
+    display: block;
+    margin: 0px auto;
+    margin-top: 50px;
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
 }
