--- a/styles/contact.module.scss
+++ b/styles/contact.module.scss
@@ -66,7 +66,7 @@
   }
   
   .shopping_page a {
-    color: #fff;
+    color: #fff !important;
     font-weight: 600;
     font-size: 20px;
     text-decoration: none;
@@ -74,6 +74,8 @@
     padding: 10px 18px 14px 18px;
     border-radius: 30px;
     line-height: 75px;
+   
+    
     
 }
 
@@ -176,11 +178,12 @@ background-color:rgb(243, 243, 248);
 }
 
 .check{
-  padding: 20px;
+  // padding: 20px;
   width: 400px;
   box-shadow: 0 2px 10px 0 rgb(0 0 0 / 13%) !important;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: #fff;
+  margin-bottom: 15px;
 
 
 }
@@ -266,13 +269,14 @@ width: 100%;
 display: flex;
 width: 100%;
 justify-content: space-around;
-border-top: 1px solid #80808061;
+border-top: 2px solid rgba(0, 0, 0, 0.04);
 border-right: 2px solid rgba(0, 0, 0, 0.04);
 background-color: white;
 border-right-color: currentcolor;
 border-right-style: none;
 border-right-width: 0px;
-padding: 15px 10px;
+border-radius: 0px 0px 5px 5px;
+// padding: 15px 10px;
 color: gray;
 margin: 0;
     
@@ -283,6 +287,7 @@ color: gray;
   }
   .removebutton {
     color: gray;
+    padding: 15px 10px;
   }
   
 }
@@ -299,8 +304,40 @@ margin-bottom: 1rem;
 .colorchange {
   color: rgb(0, 178, 189);;
 }
- 
 
+.dropdown{
+  height: 35px;
+    background: white;
+    color: black;
+    border: 2px solid #d8d8d8;
+    border-radius: 5px;
+    width: 48px;
+    margin-bottom: 15px;
+}
+.MuiSvgIcon_root {
+  fill: currentColor;
+  /* width: 1em; */
+  height: 1em;
+  display: inline-block;
+  font-size: 1.5rem;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  flex-shrink: 0;
+  user-select: none;
+}
+.MuiSvgIcon_fontSizeSmall {
+  font-size: 1.25rem;
+  border-radius: 10px;
+  background: #00b2bd;
+  color: #fff;
+  position: relative;
+}
+.CartItems_buttons1{
+  width: 40%;
+  border-right: 2px solid rgba(0, 0, 0, 0.04);
+}
+.check1{
+  padding: 30px;
+}
  
 
   
