Grden Furniture page

--- a/styles/Mattressess/Mattressess.module.scss
+++ b/styles/Mattressess/Mattressess.module.scss
@@ -150,6 +150,7 @@
   font-weight: 300;
   margin-bottom: 13px;
   border: none;
+  margin-top: 20px;
 }
 .mattressExcusive {
   background-color: #fff;
@@ -192,6 +193,8 @@
   color: #ffffff;
   font-size: 15px;
   margin-top: 20px !important;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 .DivanPageH2 button {
   color: #ffffff;
