--- a/styles/headboard.module.scss
+++ b/styles/headboard.module.scss
@@ -1,5 +1,6 @@
 .mydiv {
     background: linear-gradient(90deg, rgb(214 212 249) 75%, rgb(48 164 229) 75%);
+
     button {
         background-color: red;
         color: #fff;
@@ -13,6 +14,7 @@
         font-weight: 600;
         margin-bottom: 12px;
     }
+
     h1 {
         font-size: 34px;
         font-family: sans-serif;
@@ -21,27 +23,32 @@
         margin-top: 50px;
         margin-bottom: 30px;
     }
+
     p {
         font-family: sans-serif;
         font-size: 18px;
         line-height: 28px;
         margin-bottom: 35px;
     }
+
     img {
         width: 620px;
         height: 380px;
         position: relative;
         left: 30px;
-    
+
     }
+
     .box2 {
         border-bottom: 1px solid #8080804f;
     }
 }
+
 .mydiv1 {
     background-color: #edb213;
     padding: 15px 0 6px;
     margin-top: 10px;
+
     h1 {
         text-align: center;
         font-family: sans-serif;
@@ -49,8 +56,10 @@
         font-size: 24px;
     }
 }
+
 .mydiv2 {
     background-color: #d3d3e3;
+
     h1 {
         font-weight: 700;
         font-size: 34px;
@@ -62,12 +71,14 @@
     }
 
 }
-.bedicon{
+
+.bedicon {
     background-color: #d3d3e3;
     padding-top: 20px;
+
     .bedbox {
         margin-left: 38px;
-    
+
         p {
             text-align: center;
             font-size: 14px;
@@ -75,6 +86,7 @@
             font-weight: 600;
             margin-top: 18px;
         }
+
         img {
             width: 80px;
             height: 75px;
@@ -83,11 +95,13 @@
         }
     }
 }
-.bedicon2{
+
+.bedicon2 {
     background-color: #fff;
+
     .bedbox {
         margin-left: 38px;
-    
+
         p {
             text-align: center;
             font-size: 14px;
@@ -95,6 +109,7 @@
             font-weight: 600;
             margin-top: 18px;
         }
+
         img {
             width: 80px;
             height: 75px;
@@ -103,26 +118,30 @@
         }
     }
 }
+
 .mydiv4 {
     background-color: #d3d3e3;
-  h2{
-    text-align: center;
-    margin-top: 36px;
-    color: #0a3459;
-    font-size: 30px;
-    font-family: sans-serif;
-    font-weight: 600;
-  }
-  p{
-       margin-top: 20px;
-    line-height: 32px;
-    font-weight: 600;
-    border-bottom: 1px solid #d2bbbb;
-    padding-bottom: 24px;
-    font-family: sans-serif;
-    text-align: center;
-  }
+
+    h2 {
+        text-align: center;
+        margin-top: 36px;
+        color: #0a3459;
+        font-size: 30px;
+        font-family: sans-serif;
+        font-weight: 600;
+    }
+
+    p {
+        margin-top: 20px;
+        line-height: 32px;
+        font-weight: 600;
+        border-bottom: 1px solid #d2bbbb;
+        padding-bottom: 24px;
+        font-family: sans-serif;
+        text-align: center;
+    }
 }
+
 .mydiv6 {
     .colorbox {
         img {
@@ -131,8 +150,9 @@
         }
     }
 }
+
 .mydiv6heading {
-    h1{
+    h1 {
         text-align: center;
         font-family: sans-serif;
         font-size: 38px;
@@ -141,27 +161,31 @@
         color: #0a3459;
     }
 }
+
 .mydiv7 {
     background-image: url(/image/q.png);
     padding: 50px 0 0;
     margin-top: 80px;
     margin-bottom: 50px;
     background-color: #651d37;
+
     h1 {
         font-size: 40px;
         text-transform: capitalize;
         font-family: sans-serif;
         color: #fff;
     }
+
     p {
         color: #fff;
-    font-family: sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    margin-top: 18px;
-    line-height: 25px;
-    margin-bottom: 40px;
-}
+        font-family: sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+        margin-top: 18px;
+        line-height: 25px;
+        margin-bottom: 40px;
+    }
+
     button {
         padding: 8px 25px;
         background-color: red;
@@ -173,13 +197,15 @@
         font-family: sans-serif;
         text-transform: uppercase;
     }
+
     img {
-            width: 480px;
-            position: relative;
-            bottom: 50px;
-            left: 100px;
+        width: 480px;
+        position: relative;
+        bottom: 50px;
+        left: 100px;
     }
 }
+
 .mydiv8 {
     h2 {
         text-align: center;
@@ -188,6 +214,7 @@
         text-transform: uppercase;
         margin-bottom: 20px;
     }
+
     h1 {
         text-align: center;
         font-family: sans-serif;
@@ -195,6 +222,7 @@
         font-weight: 700;
         margin-bottom: 20px;
     }
+
     p {
         text-align: center;
         max-width: 700px;
@@ -208,14 +236,16 @@
 }
 
 .mydiv9 {
-    
+
     margin-top: 30px;
-.innerbox {
-    background-color: #f1d0d0;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    
-}
+
+    .innerbox {
+        background-color: #f1d0d0;
+        padding-top: 10px;
+        padding-bottom: 10px;
+
+    }
+
     select {
         border: none;
         outline: none;
@@ -237,13 +267,15 @@
     padding-left: 10px;
     font-style: normal;
     overflow: hidden;
-   text-overflow: ellipsis;
-   display: -webkit-box;
-   -webkit-line-clamp: 2; /* number of lines to show */
-           line-clamp: 2; 
-   -webkit-box-orient: vertical;
-   line-height: 20px;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    line-height: 20px;
 }
+
 .price {
     font-size: 1.2rem;
     font-weight: 700;
@@ -252,6 +284,7 @@
     padding-left: 10px;
     font-style: normal;
 }
+
 .box1 {
     border: 1px solid #80808063;
     padding-bottom: 10px;
@@ -259,6 +292,7 @@
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
+
 .productsimages {
     margin-top: 30px;
 }
@@ -266,47 +300,49 @@
 
 .mydiv10 {
     margin-top: 36px;
-h1 {
-    font-family: sans-serif;
-    text-transform: uppercase;
-    max-width: 1020px;
-    text-align: center;
-    display: block;
-    margin: 0 auto;
-    font-size: 38px;
-    color: #1c1c90;
-    font-weight: 700;
-    padding-bottom: 10px;
-    padding-top: 40px;
+
+    h1 {
+        font-family: sans-serif;
+        text-transform: uppercase;
+        max-width: 1020px;
+        text-align: center;
+        display: block;
+        margin: 0 auto;
+        font-size: 38px;
+        color: #1c1c90;
+        font-weight: 700;
+        padding-bottom: 10px;
+        padding-top: 40px;
+    }
+
+    p {
+        text-align: center;
+        font-size: 15px;
+        font-family: sans-serif;
+        font-weight: 600;
+        max-width: 1165px;
+        margin: 0 auto;
+        line-height: 25px;
+        padding-bottom: 42px;
+        padding-top: 12px;
+    }
+
+    button {
+        text-align: center;
+        margin: 0 auto;
+        padding: 12px 15px;
+        border-radius: 32px;
+        background-color: #3da6e4;
+        border-color: #3da6e4;
+        border: none;
+        display: block;
+        font-size: 16px;
+        color: #fff;
+        font-family: sans-serif;
+        text-transform: uppercase;
+    }
 }
 
-p {
-    text-align: center;
-    font-size: 15px;
-    font-family: sans-serif;
-    font-weight: 600;
-    max-width: 1165px;
-    margin: 0 auto;
-    line-height: 25px;
-    padding-bottom: 42px;
-    padding-top: 12px;
-}
-
-button {
-    text-align: center;
-    margin: 0 auto;
-    padding: 12px 15px;
-    border-radius: 32px;
-    background-color: #3da6e4;
-    border-color: #3da6e4;
-    border: none;
-    display: block;
-    font-size: 16px;
-    color: #fff;
-    font-family: sans-serif;
-    text-transform: uppercase;
-}
-}
 .trustpilot {
     img {
         width: 160px;
@@ -316,20 +352,24 @@ button {
         padding-top: 16px;
     }
 }
+
 .mydiv5 {
     background-color: #d3d3e3;
-         padding-top: 50px;
-         padding-bottom: 110px;
-        .krishnabox {            
-            width: 830px;
-            height: 313px;
-            box-shadow: 3px 1px 4px 1px #80808085;
-            background-color: #fff;
-            .krishnabox2 {
-                 text-align: center;
-            }
+    padding-top: 50px;
+    padding-bottom: 110px;
+
+    .krishnabox {
+        width: 830px;
+        height: 313px;
+        box-shadow: 3px 1px 4px 1px #80808085;
+        background-color: #fff;
+
+        .krishnabox2 {
+            text-align: center;
         }
-    button{
+    }
+
+    button {
         padding: 6px 35px;
         color: white;
         background-color: #ff0000;
@@ -341,40 +381,126 @@ button {
         box-shadow: -1px 4px 5px 0px #808080c4;
         font-size: 16px;
     }
-    .bedimage::before{
+
+    .bedimage::before {
         content: "";
-    position: absolute;
-    background-color: #eda434;
-    top: -26px;
-    bottom: 0;
-    left: -19px;
-    right: 0;
-    width: 84%;
-    height: 99%;
-    opacity: 0.9;
+        position: absolute;
+        background-color: #eda434;
+        top: -26px;
+        bottom: 0;
+        left: -19px;
+        right: 0;
+        width: 84%;
+        height: 99%;
+        opacity: 0.9;
     }
-    .bedimage img{
+
+    .bedimage img {
         height: 350px;
         width: 470px;
         position: relative;
         left: -65px;
     }
+
     h1 {
         margin-left: 20px;
         font-size: 60px;
         color: #66dbff;
     }
+
     p {
         max-width: 165px;
-    text-align: center;
-    display: block;
-    margin: 0 auto;
-    font-size: 16px;
-    font-weight: 600;
+        text-align: center;
+        display: block;
+        margin: 0 auto;
+        font-size: 16px;
+        font-weight: 600;
     }
+
     img {
         width: 295px;
         margin-top: 14px;
         margin-bottom: 12px;
     }
 }
+
+// --------------------------------------------------------------------------
+
+.imgcontainer {
+    position: relative;
+    margin-bottom: 36px;
+
+    .bigbed1 img {
+        width: 100%;
+        height: 436px;
+    }
+
+    img {
+        width: 100%;
+    }
+
+    h2 {
+        font-size: 16px;
+        font-weight: 700;
+        margin-left: 10px;
+        margin-top: -12px;
+    }
+
+    h1 {
+        font-family: inherit;
+        font-weight: 700;
+        font-size: 32px;
+    }
+
+    p {
+        opacity: 0.51;
+    }
+
+    .heading1 {
+        position: absolute;
+        top: 0px;
+        padding: 32px 0px 0px 31px;
+        max-width: 94%;
+    }
+}
+
+.imgcontainer2 {
+    position: relative;
+    width: 100%;
+
+    img {
+        width: 100%;
+    }
+
+    h2 {
+        font-size: 16px;
+        font-weight: 700;
+        margin-left: 10px;
+        margin-top: -12px;
+    }
+
+    h1 {
+        text-align: end;
+        font-family: inherit;
+        font-weight: 700;
+        font-size: 32px;
+    }
+
+    .bigbed2 img {
+        width: 100%;
+        height: 436px;
+    }
+
+    p {
+        margin-left: 30px;
+        opacity: 0.51;
+    }
+
+    .heading2 {
+        position: absolute;
+        top: 0px;
+        margin-top: 20px;
+        max-width: 94%;
+    }
+}
+
