--- a/styles/footer/footer.module.scss
+++ b/styles/footer/footer.module.scss
@@ -1,9 +1,9 @@
 .ftrBackgrd {
-  background-image: url(/assets/images/footer/background.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   padding-top: 50px;
+  background-color: #F2F2F2;
 }
 .single_wedge h4 {
   font-size: 15px;
