--- a/styles/HomePage/home.module.scss
+++ b/styles/HomePage/home.module.scss
@@ -261,3 +261,149 @@ hr.banner_icons {
       max-width: 94%;
   }
 }
+
+.productsimages{
+  background-color: #F5F5F5;
+  .mainh2{
+      text-align: center;
+  padding: 12px 0px;
+  font-weight: 700;
+  }
+
+.productname {
+  font-size: 16px;
+  color: #000;
+  font-weight: 700;
+  font-family: sans-serif;
+  padding-top: 10px;
+  padding-left: 10px;
+  font-style: normal;
+  overflow: hidden;
+ text-overflow: ellipsis;
+ display: -webkit-box;
+ -webkit-line-clamp: 2; /* number of lines to show */
+ -webkit-box-orient: vertical;
+ line-height: 20px;
+}
+.price {
+  font-size: 1.0rem;
+  font-weight: 700;
+  font-family: sans-serif;
+  color: #000;
+  padding-left: 10px;
+  font-style: normal;
+}
+.price del{
+  opacity: 0.51;
+  font-size: 16px;
+  padding-left: 8px;
+}
+.price span {
+  color: #4ecb4e;
+  font-weight: 500;
+  padding-left: 4px;
+}
+.box1 {
+  padding-bottom: 70px;
+  width: 260px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.productsimages {
+  margin-top: 30px;
+}
+}
+.trustpilot {
+  img {
+      width: 160px;
+      position: relative;
+      left: 12px;
+      padding-bottom: 12px;
+      padding-top: 8px;
+  }
+}
+section.qualityproducts {
+  background-color: whitesmoke;
+}
+.box2 {
+  width: 280px;
+  box-shadow: 2px 2px 10px 1px rgb(128 128 128 / 30%);
+  background-color: #fff;
+  height: 100%;
+    img {
+      width: 100%;
+      height: 190px;
+    }
+    h3 {
+      text-align: center;
+    font-size: 28px;
+    font-weight: 700;
+    }
+    p {
+      font-size: 16px;
+    line-height: 20px;
+    font-weight: 500;
+    padding-left: 15px;
+    padding-right: 9px;
+    padding-bottom: 35px;
+  }
+    button {
+      margin: 0 auto;
+      display: block;
+      border: none;
+      background-color: #000;
+      color: #fff;
+      /* padding: 5px 30px 5px; */
+      border-radius: 50px;
+      font-size: 22px;
+      position: absolute;
+      top: 418px;
+      height: 45px;
+      width: 130px;
+      left: 77px;
+    }
+}
+.qualityheading {
+  text-align: center;
+}
+.box3 {
+  background-color: whitesmoke;
+  p {
+    color: #000000;
+    font-size: 20px;
+  }
+  .perfectbed {
+    text-align: center;
+    border: 1px solid #80808066;
+    margin-top: 90px;
+    margin-bottom: 70px;
+    padding: 12px 0 0px;
+    border-radius: 10px;
+  }
+}
+.text{
+  padding-top: 36px;
+  background-color: #F5F5F5;
+  h2{
+      font-size: 20px;
+      font-weight: 500;
+     margin-bottom: 0px;
+  }
+  p{
+   opacity: 0.51;
+  }
+  .nospace h2{
+      margin-top: 0px;
+  }
+  .nospace p{
+      margin-bottom: 0px;
+  }
+  h3 {
+      font-size: 17px;
+  font-weight: 500;
+  margin-top: 10px;
+  }
+  .nospace2 p{
+          margin-top: -8px;
+  }
+}
