--- a/styles/HomePage/home.module.scss
+++ b/styles/HomePage/home.module.scss
@@ -432,6 +432,8 @@ section.qualityproducts {
 }
 .slideimg {
   position: relative;
+  left: 70px;
+  top: 10px;
   img {
     width: 327px;
     height: 205px;
