--- a/styles/NewProductPage.module.scss
+++ b/styles/NewProductPage.module.scss
@@ -1,317 +1,297 @@
 .imagestyle {
-    width: 100%;
-    object-fit: cover;
+  width: 100%;
+  object-fit: cover;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    position: absolute;
-    right: 100px;
-    top: 50%;
-    transform: translateY(-50%);
-    // -webkit-backdrop-filter: blur(15px);
-    // backdrop-filter: blur(15px);
-    border-radius: 6px;
-    gap: 10px; // 1rem = 16px
-
+  position: absolute;
+  right: 100px;
+  top: 50%;
+  transform: translateY(-50%);
+  // -webkit-backdrop-filter: blur(15px);
+  // backdrop-filter: blur(15px);
+  border-radius: 6px;
+  gap: 10px; // 1rem = 16px
 }
 
-
-
-.imageContainer{
-position: relative;
-.image{
+.imageContainer {
+  position: relative;
+  .image {
     max-width: 100%;
     min-height: 700px;
     object-fit: cover;
-}
+  }
 }
 
 .item1 {
-    display: flex;
-    height: 400px;
-    width: 435px;
-    background: #fff;
-    overflow: hidden;
+  display: flex;
+  height: 400px;
+  width: 435px;
+  background: #fff;
+  overflow: hidden;
 }
 
 .item2 {
-    background: #fff;
-    padding-bottom: 9px;
+  background: #fff;
+  padding-bottom: 9px;
 }
 
 .left {
-    flex: .3;
-    background: #0e3f70;
-    flex-wrap: wrap;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    // padding: 2px
-
+  flex: 0.3;
+  background: #0e3f70;
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  // padding: 2px
 }
 
 .imageicon {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex: 1;
-    transition: all 200ms ease-in;
-    justify-content: center;
-    background: #0e3f70;
-    user-select: none;
-    cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  transition: all 200ms ease-in;
+  justify-content: center;
+  background: #0e3f70;
+  user-select: none;
+  cursor: pointer;
 
-    span {
-        font-size: small;
-    }
+  span {
+    font-size: small;
+  }
 }
 
 .right {
-    flex: 1;
+  flex: 1;
 }
 
 .header {
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-bottom: 1px solid #DADADA;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-bottom: 1px solid #dadada;
 }
 
 .btn {
-    border-style: none;
-    float: right;
-    padding: 5px 20px 5px 20px;
+  border-style: none;
+  float: right;
+  padding: 5px 20px 5px 20px;
 
-    border-radius: 4px;
-    background-color: #E54F26;
+  border-radius: 4px;
+  background-color: #e54f26;
 }
 
 .headertitle {
-    h1 {
-        font-size: 16px;
-        font-weight: 700;
-        color: #0e3f70;
-    }
+  h1 {
+    font-size: 16px;
+    font-weight: 700;
+    color: #0e3f70;
+  }
 }
 
 .texture {
-    display: flex;
+  display: flex;
 
-    flex-wrap: wrap;
-    list-style: none;
-    font-size: 10px;
+  flex-wrap: wrap;
+  list-style: none;
+  font-size: 10px;
 
-    padding-left: 5px;
+  padding-left: 5px;
 }
 
 .texture li {
-    border: 1px solid #fff;
-    text-align: center;
-    opacity: 1;
-    cursor: pointer;
-    width: calc(100%/3);
-    padding: 10px;
-
+  border: 1px solid #fff;
+  text-align: center;
+  opacity: 1;
+  cursor: pointer;
+  width: calc(100% / 3);
+  padding: 10px;
 }
 
 .imagestyle2 {
-    border-radius: 50%;
-
+  border-radius: 50%;
 }
 
 .texture2 {
-    display: flex;
+  display: flex;
 
-    flex-wrap: wrap;
-    list-style: none;
-    font-size: 10px;
+  flex-wrap: wrap;
+  list-style: none;
+  font-size: 10px;
 }
 
 .color {
-    overflow-y: scroll;
-    height: 200px;
+  overflow-y: scroll;
+  height: 200px;
 }
 
-
 .texture2 li {
-    border: 1px solid #fff;
-    text-align: center;
-    opacity: 1;
-    cursor: pointer;
-    width: calc(100%/4);
+  border: 1px solid #fff;
+  text-align: center;
+  opacity: 1;
+  cursor: pointer;
+  width: calc(100% / 4);
 }
 
 .heading {
-    padding-left: 10px;
-    margin-bottom: 20px;
+  padding-left: 10px;
+  margin-bottom: 20px;
 }
 
 .texture2 li:hover {
-    border: 1px solid #0e3f70 !important;
-
-
+  border: 1px solid #0e3f70 !important;
 }
 
 .texture li:hover {
-    border: 1px solid #0e3f70 !important;
-
-
+  border: 1px solid #0e3f70 !important;
 }
 
 .summary {
-    h3 {
-        margin: 9px 20px -6px 20px;
-        padding-bottom: 4px;
-        color: #f4ab5d;
-        border-bottom: 0 solid #ccc;
-        font-size: 1.125rem;
-    }
+  h3 {
+    margin: 9px 20px -6px 20px;
+    padding-bottom: 4px;
+    color: #f4ab5d;
+    border-bottom: 0 solid #ccc;
+    font-size: 1.125rem;
+  }
 }
 
 .chooseitemdetail {
-    list-style: none;
+  list-style: none;
 
-    margin-left: 20px;
+  margin-left: 20px;
 
-    li {
-        padding-top: 2px;
-        color: #DADADA;
-        font-size: 11px;
-    }
+  li {
+    padding-top: 2px;
+    color: #dadada;
+    font-size: 11px;
+  }
 }
 
 .priceitemsummary {
-    margin-left: 20px;
-    display: flex;
-    align-items: center;
-    margin-top: 2px;
-    gap: 30px;
-    justify-content: space-between;
-    padding-right: 5px;
-    padding-top: 8px;
+  margin-left: 20px;
+  display: flex;
+  align-items: center;
+  margin-top: 2px;
+  gap: 30px;
+  justify-content: space-between;
+  padding-right: 5px;
+  padding-top: 8px;
 }
 
 .numbertextarea {
-
-    width: 50px;
-    height: 20px;
-    padding: 13px 9px;
-    border: 1px solid #0e3f70;
-    border-radius: 2px;
-
+  width: 50px;
+  height: 20px;
+  padding: 13px 9px;
+  border: 1px solid #0e3f70;
+  border-radius: 2px;
 }
 
 .addcart {
-    background: #f4ab5d;
-    line-height: 40px;
-    padding: 7px 20px;
-    color: #0e3f70;
-    border-radius: 5px;
-    font-size: 12px;
-    border: 0;
-    font-weight: 700
+  background: #f4ab5d;
+  line-height: 40px;
+  padding: 7px 20px;
+  color: #0e3f70;
+  border-radius: 5px;
+  font-size: 12px;
+  border: 0;
+  font-weight: 700;
 }
 
 .numberaddcard {
-    display: flex;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 // 28/6
-.banner{
-    
-  
-
-    .bannerimage{
-        width: 100% !important;
-        border: 2px solid #707070;
-    }
+.banner {
+  .bannerimage {
+    width: 100% !important;
+    border: 2px solid #707070;
+  }
 }
-.containers{
-    // max-width: 100%;
-    width: 100%;
-    padding-left: 44px;
-    padding-right: 44px;
+.containers {
+  // max-width: 100%;
+  width: 100%;
+  padding-left: 44px;
+  padding-right: 44px;
 }
 .productsimages {
-    background-color: #f5f5f5;
-    .mainh2 {
-     
-      padding: 12px 0px;
-      font-weight: 700;
-    }
-  
-    .productname {
-      font-size: 16px;
-      color: #5A5757;
-      font-weight: 700;
-      font-family: sans-serif;
-      padding-top: 10px;
-      padding-left: 10px;
-      font-style: normal;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: -webkit-box;
-      -webkit-line-clamp: 2; /* number of lines to show */
-      -webkit-box-orient: vertical;
-      line-height: 20px;
-      text-align: center;
-     
-    }
-    .price {
-      font-size: 1rem;
-      font-weight: 700;
-      font-family: sans-serif;
-      color: #000;
-      padding-left: 10px;
-      font-style: normal;
-    }
-    .price del {
-      opacity: 0.51;
-      font-size: 16px;
-      padding-left: 8px;
-    }
-    .price span {
-      color: #4ecb4e;
-      font-weight: 500;
-      padding-left: 4px;
-    }
-    .box1 {
-      padding-bottom: 70px;
-      width: 260px;
-      border-bottom-left-radius: 4px;
-      border-bottom-right-radius: 4px;
-      img {
-        width: 250px;
+  background-color: #f5f5f5;
+  .mainh2 {
+    padding: 12px 0px;
+    font-weight: 700;
+  }
+
+  .productname {
+    font-size: 16px;
+    color: #5a5757;
+    font-weight: 700;
+    font-family: sans-serif;
+    padding-top: 10px;
+    padding-left: 10px;
+    font-style: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    -webkit-box-orient: vertical;
+    line-height: 20px;
+    text-align: center;
+  }
+  .price {
+    font-size: 1rem;
+    font-weight: 700;
+    font-family: sans-serif;
+    color: #000;
+    padding-left: 10px;
+    font-style: normal;
+  }
+  .price del {
+    opacity: 0.51;
+    font-size: 16px;
+    padding-left: 8px;
+  }
+  .price span {
+    color: #4ecb4e;
+    font-weight: 500;
+    padding-left: 4px;
+  }
+  .box1 {
+    padding-bottom: 70px;
+    width: 260px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    img {
+      width: 250px;
     }
     .trustpilot {
       img {
-        
-      width: 175px;
-  
+        width: 175px;
       }
     }
-    }
-    .productsimages {
-      margin-top: 30px;
-    }
   }
-  .trustpilot {
-    img {
-      width: 160px;
-      position: relative;
-      left: 12px;
-      padding-bottom: 12px;
-      padding-top: 8px;
-    }
+  .productsimages {
+    margin-top: 30px;
   }
-  .productcart{
-    display: flex;
-    gap: 10px;
+}
+.trustpilot {
+  img {
+    width: 160px;
+    position: relative;
+    left: 12px;
+    padding-bottom: 12px;
+    padding-top: 8px;
   }
+}
+.productcart {
+  display: flex;
+  gap: 10px;
+}
